Removing bartik theme ymls

--- a/goddard_profile.info.yml
+++ b/goddard_profile.info.yml
@@ -39,6 +39,12 @@ dependencies:
   - views_templates
   - tour
   - automated_cron
+  - contact_block
+  - contact_storage
+  - paragraphs
+  - address
+  - entity_reference_revisions
+  - pathauto
 themes:
   - goddard_uswds_sub
   - uswds
