--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
   "require": {
+    "commerceguys/addressing": "^0.8.4",    
     "composer/installers": "~1.0",
         "drupal/admin_toolbar": "^1.22",
         "drupal/paragraphs": "^1.2",
         "drupal/pathauto": "^1.0",
         "drupal/sitemap": "^1.3",
-        "drupal/address": "^1.3"
+        "drupal/address": "^1.3",
         "drupal/calendar": "1.x-dev",
         "drupal/pathauto": "^1.0",
         "drupal/metatag": "^1.4"        
