--- a/config/install/core.entity_form_display.node.event.default.yml
+++ b/config/install/core.entity_form_display.node.event.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - field.field.node.event.field_time_zones
     - node.type.event
   module:
-    - address
     - datetime
     - path
     - text
@@ -35,7 +34,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_additional_location_inform:
-    weight: 2
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -43,7 +42,7 @@ content:
     type: string_textfield
     region: content
   field_event_building:
-    weight: 1
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -51,7 +50,7 @@ content:
     type: string_textfield
     region: content
   field_event_date:
-    weight: 4
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -59,12 +58,13 @@ content:
   field_event_location:
     weight: 3
     settings:
-      default_country: null
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: address_default
+    type: string_textfield
     region: content
   field_time_zones:
-    weight: 5
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
