--- a/config/install/core.entity_form_display.node.event.default.yml
+++ b/config/install/core.entity_form_display.node.event.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_time_zones
     - node.type.event
   module:
+    - address
     - datetime
     - path
     - text
@@ -34,7 +35,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_additional_location_inform:
-    weight: 5
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -42,7 +43,7 @@ content:
     type: string_textfield
     region: content
   field_event_building:
-    weight: 4
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -50,7 +51,7 @@ content:
     type: string_textfield
     region: content
   field_event_date:
-    weight: 1
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -58,13 +59,12 @@ content:
   field_event_location:
     weight: 3
     settings:
-      size: 60
-      placeholder: ''
+      default_country: null
     third_party_settings: {  }
-    type: string_textfield
+    type: address_default
     region: content
   field_time_zones:
-    weight: 2
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
