--- a/config/install/core.entity_view_display.node.event.default.yml
+++ b/config/install/core.entity_view_display.node.event.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_time_zones
     - node.type.event
   module:
+    - address
     - datetime
     - options
     - text
@@ -27,7 +28,7 @@ content:
     third_party_settings: {  }
     region: content
   field_additional_location_inform:
-    weight: 4
+    weight: 3
     label: above
     settings:
       link_to_entity: false
@@ -35,7 +36,7 @@ content:
     type: string
     region: content
   field_event_building:
-    weight: 3
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -52,12 +53,11 @@ content:
     type: datetime_default
     region: content
   field_event_location:
-    weight: 2
+    weight: 4
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: address_default
     region: content
   field_time_zones:
     weight: 6
