--- a/config/install/field.field.node.event.field_event_location.yml
+++ b/config/install/field.field.node.event.field_event_location.yml
@@ -4,15 +4,32 @@ dependencies:
   config:
     - field.storage.node.field_event_location
     - node.type.event
+  module:
+    - address
 id: node.event.field_event_location
 field_name: field_event_location
 entity_type: node
 bundle: event
 label: 'Event Location'
-description: 'Use this field to give an exact address of the event.'
+description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  available_countries:
+    US: US
+  fields:
+    administrativeArea: administrativeArea
+    locality: locality
+    dependentLocality: dependentLocality
+    postalCode: postalCode
+    sortingCode: sortingCode
+    addressLine1: addressLine1
+    addressLine2: addressLine2
+    organization: '0'
+    givenName: '0'
+    additionalName: '0'
+    familyName: '0'
+  langcode_override: ''
+field_type: address
